--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -9,11 +9,11 @@ This change in relaxation has an impact on the band structure and therefore on t
 It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy such as Pt.
 Different relaxation state, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
-Moreover, we have recently probed the average shape of multi-faceted nanoparticles at SixS under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani \textit{et al.} \parencite*{Seriani2008}.
-The evolution of two single nanoparticles exhibiting different type of facets on their surface was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and thus facet coverage on its behaviour during the ammonia oxidation cycle.
+Moreover, we have recently probed the average shape of multi-faceted nanoparticles at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
+The evolution of two single nanoparticles exhibiting different type of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and thus facet coverage on its behaviour during the ammonia oxidation cycle.
 
 The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt (100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
-In-plane reciprocal space maps were first carried out to probe for the existence of surface reconstruction from the adsorbance of reactant products, as well as for the growth of potential surface and bulk oxides on the catalyst surface.
+In-plane reciprocal space maps were first carried out to probe for the existence of surface reconstruction from the adsorbance of reacting molecules, as well as for the growth of potential surface and bulk oxides on the catalyst surface.
 Crystal truncation rods were measured to probe for surface relaxation effects, and to assert the average roughness of the catalyst surface.
 Additionnal $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
 Reflectivity curves were also carried out to obtain complementary informations about the formation of new layers on the catalyst surface.
@@ -103,21 +103,18 @@ The same procedure was applied to both Pt (111) and Pt (100) surfaces.
 The experiment was performed at an energy of \qty{15}{\keV}.
 The alignement of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
 In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
-The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), which allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
+The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), allowing us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
 Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximize the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
-The sample plane was realigned at the beginning of each condition in the direct beam, the orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks.
-
-% In-plane measurements were perfomed by rotating the in-plane sample angle $\omega$ together with the in-plane detector angle $\gamma$.
-% Out-of-plane measurements were performed by rotating the in-plane sample angle $\omega$ together with the in-plane and out-of-plane detector angles respectively $\gamma$ and $\delta$, the incoming angle $\beta$ must stay at a low value to keep the grazing incidence of the beam as detailed in sec. \ref{sec:DataCollectionSXRD}.
+The sample plane was realigned at the beginning of each condition in the direct beam to make that the beam is always on the sample surface, the orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
+    \includegraphics[trim=1cm 3cm 0 0, clip, width=0.33\textwidth]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
     \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/xps_data/B07Setup.png}
     \caption{
         Round single crystal set on sample holder (left) the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
         Large XCAT reactor opened for sputtering for (middle).
-        Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from \parencite{Held2020}.
+        Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
         \textcolor{Important}{Add image of XCAT opened and closed}
     }
     \label{fig:SampleSXRD}
