--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,21 @@ volume = {90},
 year = {2002}
 }
 
+@article{PARKINSON2003,
+title = {Reaction of atomic oxygen with a Pt(111) surface: chemical and structural determination using XPS, CAICISS and LEED},
+journal = {Surface Science},
+volume = {545},
+number = {1},
+pages = {19-33},
+year = {2003},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/j.susc.2003.08.029},
+url = {https://www.sciencedirect.com/science/article/pii/S0039602803011154},
+author = {C.R Parkinson and M Walker and C.F McConville},
+keywords = {Chemisorption, Oxidation, Oxygen, Platinum, X-ray photoelectron spectroscopy, Low energy electron diffraction (LEED), Low energy ion scattering (LEIS)},
+abstract = {The adsorption of thermally cracked atomic oxygen on the Pt(111) surface has been investigated using X-ray photoelectron spectroscopy (XPS), co-axial impact collision ion scattering spectroscopy (CAICISS), and low energy electron diffraction (LEED). High concentrations of atomic oxygen (∼2×1015 atomscm−2) can be cleanly adsorbed on the Pt(111) surface at room temperature by dosing the surface with externally generated atomic oxygen at relatively low exposures (∼50 L). Two states of oxygen are readily resolved by XPS with O1s binding energies at 530.8 and 530.2 eV. These states are assigned to chemisorbed oxygen and to an oxidic oxygen state, respectively. XPS spectra of the Pt4f region confirm the existence of an oxide species with the appearance of a peak at 2.4 eV higher binding energy than the bulk Pt 4f5/2 peak. Using a combination of angle-resolved XPS, CAICISS, and LEED, evidence is provided to suggest that penetration of oxygen into the surface occurs most likely by an exchange mechanism resulting in the reconstruction of the Pt atoms in the first two atomic layers. On annealing the oxygen covered surface at 500 °C the oxidic layer is observed to decompose and a p(2×2)-O reconstruction is observed. A CAICISS study of this reconstructed surface presents evidence in favour of O atoms occupying h.c.p. sites over f.c.c. sites. Low exposures (∼5 L) of atomic oxygen result in a sharp p(2×2) reconstruction of the Pt(111) surface and a single species in the O1s spectrum at a binding energy of 530.8 eV. Both the p(2×2)-O overlayer and the oxide species are shown to be extremely sensitive to the electron and ion beam.}
+}
+
 @article{WEAVER2005,
 title = {Oxidation of Pt(111) by gas-phase oxygen atoms},
 journal = {Surface Science},
@@ -26,6 +41,21 @@ doi = {https://doi.org/10.1016/j.susc.2005.07.010},
 author = {Jason F. Weaver and Jau-Jiun Chen and Alex L. Gerrard},
 keywords = {Oxidation, Platinum, Atomic oxygen, Atom–solid interactions, Desorption, Surface roughening, Single crystal surfaces, Metal–oxide interfaces},
 abstract = {The oxidation of Pt(111) by gas-phase oxygen atoms was investigated in ultrahigh vacuum using temperature programmed desorption (TPD), X-ray photoelectron spectroscopy (XPS), electron energy loss spectroscopy (ELS) and low energy electron diffraction (LEED). Atomic oxygen coverages as high as 2.9ML (monolayers) could be generated on Pt(111) using an atomic oxygen beam, and both the adsorption of oxygen atoms and the progression of surface oxygen phases with increasing atomic oxygen coverage are found to be relatively insensitive to the surface temperature over the range from 250 to 450K. The results show that oxidation involves the development of a chemisorbed layer for oxygen coverages up to about 0.75ML, and that the average binding energy of an oxygen atom chemisorbed on Pt(111) decreases significantly (∼100kJ/mol) with increasing oxygen coverage, in agreement with previous observations [D.H. Parker, M.E. Bartram, B.E. Koel, Surf. Sci. 217 (1989) 489, N.A. Saliba, Y.-L. Tsai, C. Panja, B.E. Koel, Surf. Sci. 419 (1999) 79]. Long-range order in the chemisorbed layer generally diminishes as the oxygen coverage increases above the 0.25ML saturation coverage of the p(2×2) layer, though the persistence of a (2×2) LEED pattern up to about 0.50ML is consistent with the formation of domains of a new, high-density ordered phase. Disordering within the chemisorbed layer becomes more pronounced with continued atomic oxygen adsorption to coverages greater than 0.50ML. Distinct features in the O2 thermal desorption traces at 650K and 560K are attributed to the desorption of oxygen from a high-density ordered phase and disordered domains, respectively, which suggests that the binding energy is lowest for oxygen atoms chemisorbed in the disordered domains. Increasing the atomic oxygen coverage above approximately 0.75ML is shown to result in the growth of Pt oxide particles and disordering of the Pt surface. Decomposition of the Pt oxide particles produces explosive desorption of O2 that is characterized by a shift of the desorption peak to higher temperature and a dramatic increase in the maximum desorption rate with increasing oxygen coverage. The main characteristics of the explosive desorption are well reproduced by a kinetic model in which oxygen atoms are assumed to migrate from oxide domains onto regions of the surface containing chemisorbed oxygen atoms, and with oxygen atoms desorbing only from the chemisorbed layer. The implication of this mechanism is that Pt oxide is more thermodynamically favorable than high concentrations of chemisorbed oxygen atoms on Pt(111), and hence that the growth of Pt oxide on Pt(111) is kinetically limited.}
+}
+
+@article{SALIBA1999,
+title = {Oxidation of Pt(111) by ozone (O3) under UHV conditions},
+journal = {Surface Science},
+volume = {419},
+number = {2},
+pages = {79-88},
+year = {1999},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/S0039-6028(98)00667-0},
+url = {https://www.sciencedirect.com/science/article/pii/S0039602898006670},
+author = {N.A Saliba and Y.-L Tsai and C Panja and B.E Koel},
+keywords = {Auger electron spectroscopy, LEED, Low index single crystal surfaces, Ozone, Pt(111) oxidation, Thermal desorption},
+abstract = {Ozone (O3) is a reactive oxidant, creating high effective oxygen pressures under ultra-high vacuum (UHV) conditions. Large oxygen concentrations up to ΘO=2.4ML were produced by ozone exposure on Pt(111) at 300K and analyzed using temperature-programmed desorption (TPD), Auger electron spectroscopy (AES), and low-energy electron diffraction (LEED). O2 desorption occurs in broad TPD peaks that shift from 814 to 558K as the oxygen coverage increases from 0.03 to 0.95ML. For coverages of ΘO≥1.2ML, “undercutting” of the desorption curves occurs, along with a narrowing and shift to higher temperature, such that O2 desorption occurs in a sharp (23K wide) peak at 708K at ΘO=2.4ML. LEED shows a (2×2) pattern for ΘO near 0.25ML, but then only a (1×1) pattern between 0.3 and 1.2ML. For oxygen coverages larger than 1.2ML, the Pt(111) surface is disordered. Using the leading edge method, we estimate that the desorption activation energy decreases from 45 to 20kcalmol−1 with increased oxygen concentration for 0<ΘO<1.2ML, and thereafter increases with increasing concentration to 38kcalmol−1 at ΘO=2.4ML. We interpret the O2 desorption curves for ΘO>1.2ML as arising from decomposition of particles of platinum oxide of increasing size near the surface. A very weakly bound state of oxygen also exists at high ΘO and desorbs at 390K. Oxidized platinum is reduced upon heating to Pt metal in the temperature range of 674–708K in UHV.}
 }
 
 @article{LI2005,
@@ -191,6 +221,33 @@ doi={10.1002/andp.19053220607},
    title = {Integrated Intensities Using a Six-Circle Surface X-ray Diffractometer},
    volume = {30},
    year = {1997},
+}
+
+@article{Mase1992,
+title = {LEED study of NO adsorption-induced restructuring of a single-domain Pt(001)-(20 × 5) surface at 80–410 K},
+journal = {Surface Science},
+volume = {277},
+number = {1},
+pages = {97-108},
+year = {1992},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(92)90615-D},
+author = {Kazuhiko Mase and Yoshitada Murata},
+abstract = {NO adsorption on a single-domain Pt(001)-(20 × 5) surface at 80–410 K has been studied with low-energy electron diffraction (LEED). The restructuring of the topmost Pt-(20 × 5) layer and the growth process of the adsorbed NO layer are found to depend on the surface temperature. At 330–390 K, a double-domain NO-c(2 × 4) layer grows while restructuring the Pt-(20 × 5) layer into the (1 × 1) structure. On the other hand, a single-domain NO-c(2 × 4) layer grows anisotropically at 230–270 K. At 80 K, the (20 × 5) → (1 × 1) restructuring of the topmost Pt layer occurs suddenly in an NO exposure range of 0.8-1.0 L. A model for the single-domain Pt(001)-(20 × 5) surface formation is presented. The restructuring of the Pt(001)-(20 × 5) surface induced by NO adsorption is discussed.}
+}
+
+@article{VANHOVE1981,
+title = {The surface reconstructions of the (100) crystal faces of iridium, platinum and gold: I. Experimental observations and possible structural models},
+journal = {Surface Science},
+volume = {103},
+number = {1},
+pages = {189-217},
+year = {1981},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(81)90107-2},
+url = {https://www.sciencedirect.com/science/article/pii/0039602881901072},
+author = {M.A. {Van Hove} and R.J. Koestner and P.C. Stair and J.P. Bibérian and L.L. Kesmodel and I. BartoŠ and G.A. Somorjai},
+abstract = {The structures of the reconstructed Ir(100), Pt(100) and Au(100) surfaces have been investigated. Low energy electron diffraction (LEED) patterns are analyzed and LEED intensity versus energy data are measured. A variety of structures is observed by LEED: Ir(100) exhibits a relatively simple (1 × 5) pattern; Pt(100) shows a series of closely related patterns, a typical representative of which has a (141−15) structure; Au(100) usually exhibits a c(26 × 68) pattern, often inaccurately described in the literature as a (20 × 5) pattern. The reconstruction of Au(111) is also considered for comparison. Various plausible structural models are discussed, while laser simulation is used to lessen the number of these models. The analysis is completed in a companion paper where LEED intensity calculations are reported to determine the atomic locations.}
 }
 
 @inbook{moritz_van_hove_2022,
@@ -379,7 +436,6 @@ year = {2000}
 abstract = {Density functional theory is used to examine binding energies and the most stable sites of atomic oxygen adsorbed on Pt(111) and Pt(100) surfaces as a function of surface coverage, as well as to evaluate the absorption energies and the energetically most favorable sites of atomic oxygen located in the subsurface, as a function of subsurface coverage. Based on the absorption energies, it is found that the tetrahedral site underneath the hep hollow site is energetically the most favorable site to absorb atomic oxygen in the subsurface of Pt(111), and the tetrahedral site underneath the bridge site is the corresponding energetically most favorable subsurface site in Pt(100) cells. Minimum energy paths identified for the diffusion of low-coverage adsorbed atomic oxygen into the subsurface sites for Pt(111) and Pt(100) cells indicate the existence of high kinetic barriers to such diffusion. {\textcopyright} 2007 American Chemical Society.},
 author = {Gu, Zhihui and Balbuena, Perla B.},
 doi = {10.1021/jp0711693},
-file = {:home/david/Documents/PhD/Papers/AVlad/Absorption of Atomic Oxygen into Subsurfaces of Pt(100) and Pt(111).pdf:pdf},
 issn = {19327447},
 journal = {Journal of Physical Chemistry C},
 number = {27},
@@ -668,11 +724,24 @@ title = {{Preservation of the Pt(100) surface reconstruction after growth of a c
 volume = {606},
 year = {2012}
 }
+
+@article{LAUTERBACH1994,
+title = {Subsurface oxygen on Pt(100): kinetics of the transition from chemisorbed to subsurface state and its reaction with CO, H2 and O2},
+journal = {Surface Science},
+volume = {313},
+number = {1},
+pages = {52-63},
+year = {1994},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(94)91156-8},
+author = {J. Lauterbach and K. Asakura and H.H. Rotermund},
+abstract = {The photoemission electron microscope (PEEM) makes it possible to image a surface via its work function. On a CO-covered Pt(100) surface, we prepared oxygen islands which appear dark in the PEEM image due to their higher work function. As the surface is heated to temperatures above 650 K we observe the conversion of these dark islands into very bright ones with work functions much lower than even that of the clean surface arising from an inverted dipole moment of oxygen atoms beneath the surface. We found an activation energy for this conversion of about 15 kcal/mol. Partially transformed oxygen islands were used to study the reactivity and the formation of this species further. CO and H2 both react with subsurface oxygen rather slowly, while at the interface between the subsurface and the chemisorbed phase, both adsorbents accelerate the conversion of parts of the remaining oxygen atoms towards the subsurface state. In contrast, additional oxygen adsorption does not contribute to a further transformation. We propose a qualitative microscopic model for the formation of subsurface oxygen based on experimental evidence.}
+}
+
 @article{Dicke2000,
 abstract = {CO oxidation on Pt(100) at oxygen pressures of 9.0×10-2 mbar was studied. An unusual decrease in catalytic activity with time was observed, which has not been observed at lower pressures. Post-reaction Auger and thermal desorption spectroscopy measurements showed the formation of a surface oxide species, which deactivated the catalyst. The surface oxide is compared to subsurface oxygen and to surface oxide studied previously on low index Pt single crystal surfaces. An adsorbate induced surface reconstruction is proposed as a possible driving force for oxide formation.},
 author = {Dicke, J. and Rotermund, H. H. and Lauterbach, J.},
 doi = {10.1016/S0039-6028(00)00189-8},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/dicke2000_SurfOxide_Pt(100).pdf:pdf},
 issn = {00396028},
 journal = {Surface Science},
 keywords = {auger electron spectroscopy,carbon monoxide,catalysis,gas interfaces,oxidation,platinum,reaction,solid,surface chemical,thermal desorption spectroscopy},
@@ -682,6 +751,7 @@ title = {{Formation of surface oxides on Pt(100) during CO oxidation in the mill
 volume = {454},
 year = {2000}
 }
+
 @article{Offermans2006,
 abstract = {By means of density functional theory calculations we have investigated the role of adsorbed atomic oxygen and adsorbed OH in the oxidation of ammonia on Pt{1 1 1}. We have investigated the dissociation of NH3,ads, NH2,ads and NHads on Pt{1 1 1} and the oxidation of these species by Oads and OHads. We have done normal mode frequency analysis and work function calculations to characterise reactant, product and transition states. We have determined reaction energies, activation entropies, kinetic parameters and corrected total energies with the zero point energy. We have shown that Oads only activates the dehydrogenation of NH3,ads and that OHads activates the dehydrogenation of all NHx,ads species and have reasoned this difference in activation by a bond order conservation principle. We have pointed out the importance of a zero point energy correction to the reaction energies and barriers. We have compared the calculated vibrational modes of the adsorbates with corresponding experimental EELS data. This has led to a revise of the frequency assignment of $\nu$(Pt-OH2), a revise in the identification of a NH2 species on the Pt{1 1 1} surface after electron bombardment of pre-adsorbed NH3 and the confirmation of an ammonia dimer binding model at the expense of a hollow site occupation by ammonia on the Pt{1 1 1} surface. {\textcopyright} 2006 Elsevier B.V. All rights reserved.},
 author = {Offermans, W. K. and Jansen, A. P.J. and van Santen, R. A.},
@@ -789,7 +859,6 @@ year = {2017}
 abstract = {The adsorption of atomic oxygen on unreconstructed Pt {100} - (1×1) and reconstructed Pt {100} - (5×1) was modeled using density-functional theory in an attempt to understand the relative stability of the unreconstructed phase as a function of oxygen coverage. Our calculations showed that at zero temperature the (5×1) is more stable than the unreconstructed (1×1) phase at zero oxygen coverage. However, oxygen absorption on the Pt {100} - (5×1) phase removed the reconstruction, reversing the phase stability. Using thermochemical analysis, we show desorption of oxygen corresponding to a temperature near 730 K, consistent with experimentally observed desorption peaks for oxygen covered (1×1) surfaces. These results have ramifications for understanding the full Pt {100} (1×1) →Pt {100} -hex-R0.7°surface phase transition. {\textcopyright} 2005 American Institute of Physics.},
 author = {Deskins, N. Aaron and Lauterbach, Jochen and Thomson, Kendall T.},
 doi = {10.1063/1.1893718},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/J.Chem.Phys122(2005)184709_Pt_oxygen.pdf:pdf},
 issn = {00219606},
 journal = {Journal of Chemical Physics},
 number = {18},
@@ -797,11 +866,11 @@ title = {{Lifting the Pt{100} surface reconstruction through oxygen adsorption: 
 volume = {122},
 year = {2005}
 }
+
 @article{Havu2010,
 abstract = {The low-index surfaces of Au and Pt all tend to reconstruct, a fact that is of key importance in many nanostructure, catalytic, and electrochemical applications. Remarkably, some significant questions regarding their structural energies remain even today, specifically for the large-scale quasihexagonally reconstructed (100) surfaces: rather dissimilar reconstruction energies for Au and Pt in available experiments and experiment and theory do not match for Pt. We here show by all-electron density functional theory that only large enough " (5×N) " approximant supercells capture the qualitative reconstruction energy trend between Au(100) and Pt(100), in contrast to what is often done in the theoretical literature. Their magnitudes are then in fact similar and closer to the measured value for Pt(100); our calculations achieve excellent agreement with known geometric characteristics and provide direct evidence for the electronic reconstruction driving force. {\textcopyright} 2010 The American Physical Society.},
 author = {Havu, Paula and Blum, Volker and Havu, Ville and Rinke, Patrick and Scheffler, Matthias},
 doi = {10.1103/PhysRevB.82.161418},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/PhysRevB.82.161418_Pt100_SurfRec.pdf:pdf},
 issn = {10980121},
 journal = {Physical Review B - Condensed Matter and Materials Physics},
 number = {16},
@@ -810,15 +879,24 @@ title = {{Large-scale surface reconstruction energetics of Pt(100) and Au(100) b
 volume = {82},
 year = {2010}
 }
-@article{Rotermund1993,
-author = {Rotermund, H H and Lauterbach, J and Haas, G},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/rotermund1993_AppPhysA_subSurfOxygen.pdf:pdf},
-journal = {Change},
-pages = {507--511},
-title = {{The Formation of Subsurface Oxygen on Pt ( 100 )}},
-volume = {511},
-year = {1993}
+
+@Article{Rotermund1993,
+author={Rotermund, H. H.
+and Lauterbach, J.
+and Haas, G.},
+title={The formation of subsurface oxygen on Pt(100)},
+journal={Applied Physics A},
+year={1993},
+month={12},
+day={01},
+volume={57},
+number={6},
+pages={507-511},
+abstract={PhotoEmission Electron Microscopy (PEEM) enables imaging a surface via its work function. If a CO covered Pt(100) surface is exposed to oxygen patches are formed which appear dark in the PEEM image due to their high work function. As the surface is heated to temperatures above 650 K we observe the conversion of these dark islands into very bright ones with work functions much lower than even that of the clean surface. These findings are attributed to a change in the dipole moment of the adsorbed oxygen induced by their migration beneath the surface. A total work-function decrease of up to 1.2 eV has been evaluated independently using a Scanning Photoemission Microscope (SPM). The properties of this new kind of oxygen were also further investigated with thermal desorption spectroscopy and with Auger-electron spectroscopy.},
+issn={1432-0630},
+doi={10.1007/BF00331749},
 }
+
 
 @article{NatureEditorial2018,
    doi = {10.1038/s41929-018-0188-0},
@@ -918,6 +996,37 @@ year = {2003}
   urldate = {2023-08-20},
 }
 
+@article{Li2016,
+   abstract = {The surface structure of noble metal nanoparticles usually plays a crucial role during the catalytic process in the fields of energy and environment. It has been studied extensively by surface analytic methods, such as scanning tunneling microscopy. However, it is still challenging to secure a direct observation of the structural evolution of surfaces of nanocatalysts in reaction (gas and heating) conditions at the atomic scale. Here we report an in-situ observation of atomic reconstruction on Pt \{100\} surfaces exposed to oxygen in an environmental transmission electron microscope (TEM). Our high-resolution TEM images revealed that Pt-\{100\}-p(2×2)-O reconstruction occurs during the reaction between oxygen atoms and \{100\} facets. A reconstruction model was proposed, and TEM images simulated according to this model with different defocus values match the experimental results well.},
+   author = {Hengbo Li and Wentao Yuan and Ying Jiang and Zhengfei Zhang and Ze Zhang and Yong Wang},
+   doi = {10.1016/j.pnsc.2016.05.009},
+   issn = {10020071},
+   issue = {3},
+   journal = {Progress in Natural Science: Materials International},
+   keywords = {Environmental transmission electron microscopy (ET,In Situ TEM,Pt nanoparticles,Surface reconstruction},
+   pages = {308-311},
+   publisher = {Elsevier},
+   title = {Observation of Pt-\{100\}-p(2×2)-O reconstruction by an environmental TEM},
+   volume = {26},
+   url = {http://dx.doi.org/10.1016/j.pnsc.2016.05.009},
+   year = {2016},
+}
+
+
+@article{Kuhnke1992,
+  title = {Top-layer superstructures of the reconstructed Pt(100) surface},
+  author = {Kuhnke, Klaus and Kern, Klaus and Comsa, George and Moritz, Wolfgang},
+  journal = {Phys. Rev. B},
+  volume = {45},
+  issue = {24},
+  pages = {14388--14391},
+  numpages = {0},
+  year = {1992},
+  month = {06},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.45.14388},
+}
+
 @online{Diadem,
   title = {Dispositifs Intégrés pour l’Accélération du DEploiement de Matériaux Emergents},
   year = 2023,
@@ -988,12 +1097,11 @@ year = {2012}
 @article{VanBeurden2004,
 author = {{Van Beurden}, P. and Kramer, G. J.},
 doi = {10.1063/1.1763834},
-file = {:home/david/Documents/PhD/Papers/AVlad/Atomistic mechanisms for the surface phase transformations of Pt(100).pdf:pdf},
 issn = {00219606},
 journal = {Journal of Chemical Physics},
 number = {5},
 pages = {2317--2325},
-title = {{Atomistic mechanisms for the (1×1)⇌hex surface phase transformations of Pt(100)}},
+title = {{Atomistic mechanisms for the (1×1) - hex surface phase transformations of Pt(100)}},
 volume = {121},
 year = {2004}
 }
@@ -1046,26 +1154,11 @@ title = {{Observation of the structural transition Pt(100) 1 × 1 → hex by LEE
 volume = {11-12},
 year = {1982}
 }
-@article{Li2016,
-abstract = {The surface structure of noble metal nanoparticles usually plays a crucial role during the catalytic process in the fields of energy and environment. It has been studied extensively by surface analytic methods, such as scanning tunneling microscopy. However, it is still challenging to secure a direct observation of the structural evolution of surfaces of nanocatalysts in reaction (gas and heating) conditions at the atomic scale. Here we report an in-situ observation of atomic reconstruction on Pt {100} surfaces exposed to oxygen in an environmental transmission electron microscope (TEM). Our high-resolution TEM images revealed that Pt-{100}-p(2×2)-O reconstruction occurs during the reaction between oxygen atoms and {100} facets. A reconstruction model was proposed, and TEM images simulated according to this model with different defocus values match the experimental results well.},
-author = {Li, Hengbo and Yuan, Wentao and Jiang, Ying and Zhang, Zhengfei and Zhang, Ze and Wang, Yong},
-doi = {10.1016/j.pnsc.2016.05.009},
-file = {:home/david/Documents/PhD/Papers/AVlad/Observation_of_Pt-100-p22-O_reconstruction_by_an_e.pdf:pdf},
-issn = {10020071},
-journal = {Progress in Natural Science: Materials International},
-keywords = {Environmental transmission electron microscopy (ET,In Situ TEM,Pt nanoparticles,Surface reconstruction},
-number = {3},
-pages = {308--311},
-publisher = {Elsevier},
-title = {{Observation of Pt-{100}-p(2×2)-O reconstruction by an environmental TEM}},
-volume = {26},
-year = {2016}
-}
+
 @article{Cox1983,
 abstract = {Isothermal low-pressure oscillations of the rate of catalytic CO oxidation on a Pt(100) surface could be established under appropriate conditions and were monitored through the accompanying periodic variation of the work function. Parallel observations by the Video-LEED technique demonstrated that these oscillations are associated with periodic transformations of the (long-range) surface structure from the reconstructed hex to the 1 × 1 phase and back, which is caused by varying surface concentrations of the reacting particles. {\textcopyright} 1983.},
 author = {Cox, M. P. and Ertl, G. and Imbihl, R. and R{\"{u}}stig, J.},
 doi = {10.1016/0039-6028(83)90423-5},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/cox1983_SurfSciLett_Pt100_CO_oxidation.pdf:pdf},
 issn = {00396028},
 journal = {Surface Science},
 number = {2},
@@ -1074,11 +1167,11 @@ title = {{Non-equilibrium surface phase transitions during the catalytic oxidati
 volume = {134},
 year = {1983}
 }
+
 @article{McMillan2005,
 abstract = {Spatially resolved techniques, such as photoemission electron microscopy (PEEM) and ellipsomicroscopy for surface imaging (EMSI), have been particularly useful in the investigation of pattern formation during CO oxidation on platinum catalysts. One surprising result of these studies has been the discovery of subsurface oxygen on Pt(1 0 0). The formation of subsurface oxygen has been reported previously on Pt(1 0 0) during CO oxidation at low pressures (<1 × 10-4 Torr). This communication reports the formation of subsurface oxygen at intermediate pressures (∼0.1 Torr). These observations show that subsurface oxygen plays a role in catalytic CO oxidation and pattern formation, which has implications for catalysts operated at higher pressures. New microkinetic models of CO oxidation that incorporate subsurface oxygen are discussed. Results of these models are qualitatively similar to experimental observations of subsurface oxygen, confirming the importance of this species in the reaction dynamics. {\textcopyright} 2005 Elsevier B.V. All rights reserved.},
 author = {McMillan, Noah and Lele, Tanmay and Snively, Christopher and Lauterbach, Jochen},
 doi = {10.1016/j.cattod.2005.02.042},
-file = {:home/david/Documents/PhD/Papers/AVlad/Subsurface oxygen formation on Pt(1 0 0).pdf:pdf},
 issn = {09205861},
 journal = {Catalysis Today},
 keywords = {CO oxidation,EMSI,PEEM,Pattern formation,Pt(100),Subsurface oxygen},
@@ -1265,10 +1358,8 @@ year = {1998}
 abstract = {The clean and reconstructed surfaces of Pt(100) and Ir(100) were investigated by low energy electron diffraction (LEED). It is shown that two superstructures can be observed in the case of platinum. The structure Pt(100)-hex, which is commonly called Pt(100)-(5 × 20), transforms to Pt(100)-hex-R0.7° above 1100 K. It is shown that this stable phase differs from the first one by a slight rotation of the hexagonal surface layer by 0.7°. For Ir(100) only the well known (1 × 5) superstructure is observed without any rotation of the outer layer. The rotation angle of 0.7° for platinum and the stability of the unrelated structure for iridium can be interpreted by simple calculations of the coordination of surface atoms with those of the second layer. The method assumes that the surface layer is of ideal hexagonal structure in the case of platinum and nearly hexagonal in the case of iridium. The results are in good agreement with the experiment. {\textcopyright} 1979.},
 author = {Heilmann, P. and Heinz, K. and M{\"{u}}ller, K.},
 doi = {10.1016/0039-6028(79)90058-X},
-file = {:home/david/Documents/PhD/Papers/0039-6028%2879%2990058-x.pdf:pdf},
 issn = {00396028},
 journal = {Surface Science},
-mendeley-groups = {PHD/Ammonia oxidation},
 number = {2},
 pages = {487--497},
 title = {{The superstructures of the clean Pt(100) and Ir(100) surfaces}},
@@ -3760,7 +3851,6 @@ pages = {1029-1031},
 year = {2006},
 issn = {0921-4526},
 doi = {https://doi.org/10.1016/j.physb.2006.05.328},
-url = {https://www.sciencedirect.com/science/article/pii/S0921452606012336},
 author = {R.I. Bewley and R.S. Eccleston and K.A. McEwen and S.M. Hayden and M.T. Dove and S.M. Bennington and J.R. Treadgold and R.L.S. Coleman},
 keywords = {Neutron instruments, Time of flight, Direct geometry},
 abstract = {MERLIN is designed to be a high intensity, medium energy resolution spectrometer. As such, it will complement the high-resolution MAPS spectrometer at ISIS. MERLIN will utilise all the latest advances in technology with a supermirror guide to enhance flux as well as 3m long position-sensitive detectors in a vacuum making it ideal for single-crystal users. The detector bank will cover a massive π steradians of solid angle with an angular range from -45° to +135° degrees in the horizontal plane and ±30° degrees in the vertical plane. This will allow large swathes of Q,ω space to be accessed in a single run. The instrument will be ready for commissioning in February 2006. This paper presents details of design and performance of this new instrument.}
@@ -4661,9 +4751,16 @@ number={5},
 pages={1392-1394},
 issn={0002-7863},
 doi={10.1021/ja01850a074},
-url={https://doi.org/10.1021/ja01850a074}
 }
 
+@article{Galloni1941,
+   author = {Galloni, Ernesto E. and Roffo, Angel E.},
+   journal = {Journal of Chemical Physics},
+   pages = {4-7},
+   title = {The Crystalline Structure of Pt3O4},
+   volume = {9},
+   year = {1941},
+}
 
 
 @article{Galloni1952,
